--- a/css/style.css
+++ b/css/style.css
@@ -1071,7 +1071,91 @@ body.touch .sub-menu__list.open li {
 }
 
 .bluebar__text {
-  color: #4972B3;
+  color: #4972b3;
+}
+
+.articles {
+  margin: 0 0 100px 0;
+}
+
+.articles__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -12px;
+}
+
+.articles__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
+  padding: 0 12px;
+  margin-bottom: 20px;
+  min-width: 280px;
+}
+
+.articles__image {
+  padding: 0 0 75% 0;
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 12px;
+}
+
+.articles__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.articles__link {
+  font-weight: bold;
+  font-size: 24px;
+  color: #234d8e;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.articles__link:after {
+  content: '';
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  background: url("../img/articles/arrow.svg") center no-repeat;
+  width: 10px;
+  height: 20px;
+  display: inline-block;
+  -webkit-transform: translate(0px, 3px);
+          transform: translate(0px, 3px);
+  padding-right: 50px;
+}
+
+.articles__link:hover {
+  text-decoration: underline;
+}
+
+.articles__link:hover:after {
+  background: url("../img/articles/arrow-hover.svg") center no-repeat;
+}
+
+@media (max-width: 992px) {
+  .articles {
+    margin: 30px 0;
+  }
 }
 
 .footer {
