--- a/scss/style.scss
+++ b/scss/style.scss
@@ -679,7 +679,7 @@ body {
 		@media (max-width: 992px) {
 			padding: 20px;
 			justify-content: center;
-			height: 93vh;
+			height: 94vh;
 		}
 	}
 
@@ -705,7 +705,7 @@ body {
 		letter-spacing: -0.02em;
 		color: #ffffff;
 		max-width: 820px;
-		margin-bottom: 42px;
+		margin-bottom: 50px;
 		@media (max-width: 767px) {
 			font-size: 16px;
 		}
@@ -721,21 +721,21 @@ body {
 		position: relative;
 		z-index: 1;
 	}
+}
 
-	.button {
-		background: #caad73;
-		color: #fff;
-		padding: 15px 40px;
-		font-weight: bold;
-		font-size: 15px;
-		text-transform: uppercase;
-		color: #ffffff;
-		transition: all 0.3s ease 0s;
-		border: 1px solid #caad73;
-		&:hover {
-			color: #caad73;
-			background: #ffffff;
-		}
+.button {
+	background: #caad73;
+	color: #fff;
+	padding: 15px 40px;
+	font-weight: bold;
+	font-size: 15px;
+	text-transform: uppercase;
+	color: #ffffff;
+	transition: all 0.3s ease 0s;
+	border: 1px solid #caad73;
+	&:hover {
+		color: #caad73;
+		background: #ffffff;
 	}
 }
 
@@ -745,7 +745,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-
+	background: #edf0f3;
 	&__body {
 		min-height: 160px;
 		background: #234d8e;
@@ -816,7 +816,8 @@ body {
 //articles
 
 .articles {
-	margin: 0 0 100px 0;
+	background: #edf0f3;
+	padding: 0 0 100px 0;
 	&__body {
 		display: flex;
 		justify-content: center;
@@ -853,26 +854,116 @@ body {
 		font-size: 24px;
 		color: #234d8e;
 		transition: all 0.3s ease 0s;
-		&:after{
-			content: '';
+		&:after {
+			content: "";
 			transition: all 0.3s ease 0s;
-			background: url('../img/articles/arrow.svg') center no-repeat;
+			background: url("../img/articles/arrow.svg") center no-repeat;
 			width: 10px;
 			height: 20px;
 			display: inline-block;
 			transform: translate(0px, 3px);
 			padding-right: 50px;
 		}
-		&:hover{
+		&:hover {
 			text-decoration: underline;
-			&:after{
-				background: url('../img/articles/arrow-hover.svg') center no-repeat;
+			&:after {
+				background: url("../img/articles/arrow-hover.svg") center no-repeat;
 			}
 		}
 	}
-	@media (max-width:992px) {
-		margin: 30px 0;
+	@media (max-width: 992px) {
+		padding: 30px 0;
 	}
+}
+
+//about
+
+.about {
+	padding-bottom: 180px;
+	background: url("../img/about/bg.jpg") bottom right no-repeat, #edf0f3;
+	&__body {
+	}
+
+	&__top {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: 100px;
+	}
+
+	&__image {
+		flex: 0 0 50%;
+		position: relative;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+	}
+
+	&__info {
+		flex: 1 1 auto;
+		padding: 50px 15px 70px 15px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	&__title {
+		font-family: "Playfair Display";
+		font-weight: bold;
+		font-size: 48px;
+		line-height: 133%;
+		color: #234d8e;
+		max-width: 450px;
+		margin-bottom: 48px;
+	}
+
+	&__text {
+		max-width: 800px;
+		font-size: 15px;
+		line-height: 180%;
+		letter-spacing: -0.02em;
+		color: #3d3d3d;
+		margin-bottom: 60px;
+	}
+
+	&__button-container {
+	}
+
+	&__button {
+	}
+
+	&__bottom {
+		padding: 0 15px;
+	}
+
+	&__icon {
+		border: 1px solid #C4C4C4;
+		border-radius: 50%;
+		height: 80px;
+		width: 80px;
+		margin: 0 auto 32px auto;
+		background: url('../img/about/icon.svg') center no-repeat;
+	}
+
+	&__mission {
+		font-family: "Playfair Display";
+		font-style: italic;
+		font-weight: bold;
+		font-size: 30px;
+		line-height: 160%;
+		max-width: 830px;
+		text-align: center;
+		letter-spacing: -0.02em;
+		color: #234d8e;
+		margin: 0 auto;
+	}
+}
+.button {
 }
 
 //footer
