--- a/scss/style.scss
+++ b/scss/style.scss
@@ -559,39 +559,12 @@ body {
 	}
 	&__slider {
 		position: relative;
-		/* Слайдер */
-		.slick-slider {
-		}
-		/* Слайдер запущен */
-		.slick-slider.slick-initialized {
-		}
-		/* Слайдер с точками */
-		.slick-slider.slick-dotted {
-		}
-		/* Ограничивающая оболочка */
 		.slick-list {
 			overflow: hidden;
 		}
-		/* Лента слайдов */
 		.slick-track {
 			display: flex;
 		}
-		/* Слайд */
-		.slick-slide {
-		}
-		/* Слайд активный (показывается) */
-		.slick-slide.slick-active {
-		}
-		/* Слайд основной */
-		.slick-slide.slick-current {
-		}
-		/* Слайд по центру */
-		.slick-slide.slick-center {
-		}
-		/* Клонированный слайд */
-		.slick-slide.slick-cloned {
-		}
-		/* Стрелка */
 		.slick-arrow {
 			position: absolute;
 			top: 50%;
@@ -604,7 +577,6 @@ body {
 				left: 20px;
 			}
 		}
-		/* Стрелка влево */
 		.slick-arrow.slick-prev {
 			background: url("../img/mainscreen/left.png") 0 0 no-repeat;
 			transform: translate(0, -100%);
@@ -613,7 +585,6 @@ body {
 					url("../img/mainscreen/Subtract-left.png") 0 0 no-repeat;
 			}
 		}
-		/* Стрелка вправо */
 		.slick-arrow.slick-next {
 			background: url("../img/mainscreen/right.png") 0 0 no-repeat;
 			transform: translate(0, 30%);
@@ -622,15 +593,11 @@ body {
 					url("../img/mainscreen/Subtract-right.png") 0 0 no-repeat;
 			}
 		}
-		/* Стрелка не активная */
-		.slick-arrow.slick-disabled {
-		}
-		/* Точки (булиты) */
 		.slick-dots {
 			display: flex;
 			align-items: center;
 			position: absolute;
-			bottom: 60px;
+			bottom: 100px;
 			left: 260px;
 			@media (max-width: 1365px) {
 				left: 120px;
@@ -639,14 +606,12 @@ body {
 		.slick-dots li {
 			list-style: none;
 		}
-		/* Активная точка */
 		.slick-dots li.slick-active {
 			button {
 				background: #caad73;
 				opacity: 1;
 			}
 		}
-		/* Элемент точки */
 		.slick-dots li button {
 			transition: all 0.3s ease 0s;
 			font-size: 0;
@@ -709,12 +674,6 @@ body {
 		@media (max-width: 767px) {
 			font-size: 16px;
 		}
-	}
-
-	&__button-wrap {
-	}
-
-	&__button {
 	}
 
 	.item-wrap {
@@ -872,28 +831,33 @@ body {
 		}
 	}
 	@media (max-width: 992px) {
-		padding: 30px 0;
+		padding: 40px 0;
 	}
 }
 
 //about
-
 .about {
 	padding-bottom: 180px;
 	background: url("../img/about/bg.jpg") bottom right no-repeat, #edf0f3;
-	&__body {
+	@media (max-width: 992px) {
+		padding-bottom: 40px;
 	}
 
 	&__top {
 		display: flex;
-		align-items: center;
-		justify-content: center;
 		margin-bottom: 100px;
+		@media (max-width: 992px) {
+			margin-bottom: 30px;
+		}
+		@media (max-width: 767px) {
+			flex-direction: column;
+		}
 	}
 
 	&__image {
-		flex: 0 0 50%;
+		flex: 0 1 50%;
 		position: relative;
+		min-height: 700px;
 		img {
 			width: 100%;
 			height: 100%;
@@ -902,14 +866,21 @@ body {
 			top: 0;
 			left: 0;
 		}
+		@media (max-width: 767px) {
+			flex: none;
+			min-height: 300px;
+		}
 	}
 
 	&__info {
 		flex: 1 1 auto;
-		padding: 50px 15px 70px 15px;
+		padding: 50px 15px 70px 150px;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		@media (max-width: 1365px) {
+			padding: 15px;
+		}
 	}
 
 	&__title {
@@ -920,21 +891,23 @@ body {
 		color: #234d8e;
 		max-width: 450px;
 		margin-bottom: 48px;
+		@media (max-width: 767px) {
+			max-width: 100%;
+			margin-bottom: 10px;
+			font-size: 30px;
+		}
 	}
 
 	&__text {
-		max-width: 800px;
+		max-width: 700px;
 		font-size: 15px;
 		line-height: 180%;
 		letter-spacing: -0.02em;
 		color: #3d3d3d;
 		margin-bottom: 60px;
-	}
-
-	&__button-container {
-	}
-
-	&__button {
+		@media (max-width: 767px) {
+			max-width: 100%;
+		}
 	}
 
 	&__bottom {
@@ -942,12 +915,15 @@ body {
 	}
 
 	&__icon {
-		border: 1px solid #C4C4C4;
+		border: 1px solid #c4c4c4;
 		border-radius: 50%;
 		height: 80px;
 		width: 80px;
 		margin: 0 auto 32px auto;
-		background: url('../img/about/icon.svg') center no-repeat;
+		background: url("../img/about/icon.svg") center no-repeat;
+		@media (max-width: 767px) {
+			margin: 0 auto 10px auto;
+		}
 	}
 
 	&__mission {
@@ -961,9 +937,11 @@ body {
 		letter-spacing: -0.02em;
 		color: #234d8e;
 		margin: 0 auto;
+		@media (max-width: 767px){
+			font-size: 24px;
+			line-height: 130%;
+		}
 	}
-}
-.button {
 }
 
 //footer
