--- a/css/style.css
+++ b/css/style.css
@@ -1298,6 +1298,29 @@ body.touch .sub-menu__list.open li {
   }
 }
 
+.schedule {
+  min-height: 240px;
+  background: #234D8E;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (max-width: 767px) {
+  .schedule__button {
+    max-width: 280px;
+    text-align: center;
+    line-height: 130%;
+    letter-spacing: 5px;
+  }
+}
+
 .footer {
   background: #132e51;
 }
