--- a/scss/style.scss
+++ b/scss/style.scss
@@ -937,7 +937,7 @@ body {
 		letter-spacing: -0.02em;
 		color: #234d8e;
 		margin: 0 auto;
-		@media (max-width: 767px){
+		@media (max-width: 767px) {
 			font-size: 24px;
 			line-height: 130%;
 		}
@@ -946,18 +946,190 @@ body {
 
 //news
 
+.news {
+	&__body {
+		min-height: 540px;
+		padding-top: 120px;
+		padding-left: 100px;
+		@media (max-width:992px) {
+			min-height: 380px;
+			padding: 40px 0 40px 100px;
+		}
+		@media (max-width:767px) {
+			padding: 40px 15px;
+			min-height: 460px;
+		}
+		@media (max-width:460px){
+			min-height: 420px;
+		}
+	}
 
+	&__slider {
+		position: relative;
+		margin: 0 -12px;
+		.slick-list {
+			overflow: hidden;
+		}
+		.slick-track {
+			display: flex;
+		}
+		.slick-slide.slick-current {
+			.news__first-slide {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+		.slick-arrow {
+			position: absolute;
+			top: 50%;
+			left: -80px;
+			z-index: 10;
+			font-size: 0;
+			width: 60px;
+			height: 60px;
+			border: 1px solid #c4c4c4;
+			border-radius: 50%;
+			transition: all 0.3s ease 0s;
+			@media (max-width:767px) {
+				top: 108%;
+				left: 50%;
+			}
+		}
+		.slick-arrow.slick-prev {
+			transform: translate(0, -110%);
+			background: url("../img/news/left-arrow.png") center no-repeat;
+			&:hover {
+				background: url("../img/news/left-arrow-hover.png") center no-repeat;
+			}
+			@media (max-width:767px) {
+				transform: translate(-110%, 0);
+			}
+		}
+		.slick-arrow.slick-next {
+			transform: translate(0, 10%);
+			background: url("../img/news/right-arrow.png") center no-repeat;
+			&:hover {
+				background: url("../img/news/right-arrow-hover.png") center no-repeat;
+			}
+			@media (max-width:767px) {
+				transform: translate(10%, 0);
+			}
+		}
+		.slick-dots {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		.slick-dots li {
+			list-style: none;
+		}
+		.slick-dots li.slick-active button {
+			background-color:  #234D8E;
+		}
+		.slick-dots li button {
+			transition: all 0.3s ease 0s;
+			font-size: 0;
+			height: 2px;
+			width: 120px;
+			background: #edf0f3;
+			position: relative;
+			top: 10px;
+			left: 0;
+			@media (max-width:1365px) {
+				width: 50px;
+			}
+			@media (max-width:767px) {
+				width: 20px;
+			}
+		}
+	}
+
+	&__slider-item {
+		height: 300px;
+		width: 400px;
+		background: #edf0f3;
+		padding: 50px;
+		margin: 0 12px;
+		display: flex;
+		flex-direction: column;
+		position: relative;
+		border: 2px solid transparent;
+		cursor: pointer;
+		transition: all 0.3s ease 0s;
+		&:hover{
+			border: 2px solid #DAE4EE;
+		}
+		@media (max-width:460px) {
+			height: 250px;
+			padding: 30px 20px;
+		}
+	}
+
+	&__text {
+		flex: 1 1 auto;
+		font-family: "Playfair Display";
+		font-weight: bold;
+		font-size: 20px;
+		line-height: 150%;
+		color: #234d8e;
+		@media (max-width:460px){
+			font-size: 16px;
+		}
+	}
+
+	&__first-slide {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		background: url("../img/news/bg.jpg") center/cover no-repeat;
+		padding: 50px;
+		display: flex;
+		flex-direction: column;
+		transition: all 0.3s ease 0s;
+		opacity: 0;
+		visibility: hidden;
+		@media (max-width:460px) {
+			padding: 30px 20px;
+		}
+	}
+
+	&__subtitle {
+		flex: 1 1 auto;
+		font-family: "Playfair Display";
+		font-weight: bold;
+		font-size: 36px;
+		line-height: 144%;
+		color: #ffffff;
+		@media (max-width:460px){
+			font-size: 26px;
+			line-height: normal;
+		}
+	}
+
+	&__link {
+		font-weight: bold;
+		font-size: 18px;
+		color: #ffffff;
+		transition: all 0.3s ease 0s;
+		background: url("../img/news/arrow.svg") 135px 2px /contain no-repeat;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
 
 //schedule
 
 .schedule {
 	min-height: 240px;
-	background: #234D8E;
+	background: #234d8e;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	&__button {
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			max-width: 280px;
 			text-align: center;
 			line-height: 130%;
