--- a/css/style.css
+++ b/css/style.css
@@ -1259,6 +1259,14 @@ body.touch .sub-menu__list.open li {
   }
 }
 
+@media (max-width: 767px) {
+  .about__button-container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
 .about__bottom {
   padding: 0 15px;
 }
