--- a/scss/style.scss
+++ b/scss/style.scss
@@ -156,9 +156,9 @@ body {
 		z-index: 2;
 	}
 
-	&-subordinate{
-		&:before{
-			background: #F2F2F2;
+	&-subordinate {
+		&:before {
+			background: #f2f2f2;
 		}
 	}
 
@@ -527,6 +527,9 @@ body {
 					margin-bottom: 0;
 				}
 			}
+			&-subordinate {
+				background: #f2f2f2;
+			}
 		}
 
 		&__list-last {
@@ -551,6 +554,9 @@ body {
 
 .main {
 	flex: 1 1 auto;
+	&-subordinate {
+		background: #e5e5e5;
+	}
 }
 
 //mainscreen
@@ -575,7 +581,7 @@ body {
 			position: absolute;
 			top: 50%;
 			left: 60px;
-			z-index: 10;
+			z-index: 2;
 			font-size: 0;
 			height: 60px;
 			width: 60px;
@@ -915,8 +921,8 @@ body {
 			max-width: 100%;
 		}
 	}
-	&__button-container{
-		@media (max-width:767px) {
+	&__button-container {
+		@media (max-width: 767px) {
 			align-self: center;
 		}
 	}
@@ -962,15 +968,15 @@ body {
 		min-height: 540px;
 		padding-top: 120px;
 		padding-left: 100px;
-		@media (max-width:992px) {
+		@media (max-width: 992px) {
 			min-height: 380px;
 			padding: 40px 0 40px 100px;
 		}
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			padding: 40px 15px;
 			min-height: 460px;
 		}
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			min-height: 420px;
 		}
 	}
@@ -994,14 +1000,14 @@ body {
 			position: absolute;
 			top: 50%;
 			left: -80px;
-			z-index: 10;
+			z-index: 2;
 			font-size: 0;
 			width: 60px;
 			height: 60px;
 			border: 1px solid #c4c4c4;
 			border-radius: 50%;
 			transition: all 0.3s ease 0s;
-			@media (max-width:767px) {
+			@media (max-width: 767px) {
 				top: 108%;
 				left: 50%;
 			}
@@ -1012,7 +1018,7 @@ body {
 			&:hover {
 				background: url("../img/news/left-arrow-hover.png") center no-repeat;
 			}
-			@media (max-width:767px) {
+			@media (max-width: 767px) {
 				transform: translate(-110%, 0);
 			}
 		}
@@ -1022,7 +1028,7 @@ body {
 			&:hover {
 				background: url("../img/news/right-arrow-hover.png") center no-repeat;
 			}
-			@media (max-width:767px) {
+			@media (max-width: 767px) {
 				transform: translate(10%, 0);
 			}
 		}
@@ -1035,7 +1041,7 @@ body {
 			list-style: none;
 		}
 		.slick-dots li.slick-active button {
-			background-color:  #234D8E;
+			background-color: #234d8e;
 		}
 		.slick-dots li button {
 			transition: all 0.3s ease 0s;
@@ -1046,10 +1052,10 @@ body {
 			position: relative;
 			top: 10px;
 			left: 0;
-			@media (max-width:1365px) {
+			@media (max-width: 1365px) {
 				width: 50px;
 			}
-			@media (max-width:767px) {
+			@media (max-width: 767px) {
 				width: 20px;
 			}
 		}
@@ -1067,10 +1073,10 @@ body {
 		border: 2px solid transparent;
 		cursor: pointer;
 		transition: all 0.3s ease 0s;
-		&:hover{
-			border: 2px solid #DAE4EE;
+		&:hover {
+			border: 2px solid #dae4ee;
 		}
-		@media (max-width:460px) {
+		@media (max-width: 460px) {
 			height: 250px;
 			padding: 30px 20px;
 		}
@@ -1083,7 +1089,7 @@ body {
 		font-size: 20px;
 		line-height: 150%;
 		color: #234d8e;
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			font-size: 16px;
 		}
 	}
@@ -1101,7 +1107,7 @@ body {
 		transition: all 0.3s ease 0s;
 		opacity: 0;
 		visibility: hidden;
-		@media (max-width:460px) {
+		@media (max-width: 460px) {
 			padding: 30px 20px;
 		}
 	}
@@ -1113,7 +1119,7 @@ body {
 		font-size: 36px;
 		line-height: 144%;
 		color: #ffffff;
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			font-size: 26px;
 			line-height: normal;
 		}
@@ -1124,7 +1130,7 @@ body {
 		font-size: 18px;
 		color: #ffffff;
 		transition: all 0.3s ease 0s;
-		background: url("../img/news/arrow.svg") 135px 2px /contain no-repeat;
+		background: url("../img/news/arrow.svg") 135px 2px / contain no-repeat;
 		&:hover {
 			text-decoration: underline;
 		}
@@ -1146,6 +1152,259 @@ body {
 			line-height: 130%;
 			letter-spacing: 5px;
 		}
+	}
+}
+
+//top
+
+.top {
+	background: url("../img/list/bg.jpg") center/cover no-repeat;
+	margin-top: 110px;
+	@media (max-width: 767px) {
+		margin-top: 60px;
+	}
+	@media (max-width: 460px) {
+		margin-top: 50px;
+	}
+	&__body {
+		padding-top: 60px;
+		min-height: 280px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		@media (max-width: 460px) {
+			padding-top: 30px;
+		}
+	}
+
+	&__breadcrumbs {
+		line-height: 30px;
+		letter-spacing: -0.02em;
+		color: #dae4ee;
+	}
+
+	&__link {
+		line-height: 30px;
+		letter-spacing: -0.02em;
+		color: #dae4ee;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
+.title {
+	font-family: "Playfair Display";
+	font-weight: bold;
+	font-size: 36px;
+	color: #ffffff;
+	margin-bottom: 10px;
+	@media (max-width: 460px) {
+		font-size: 26px;
+	}
+}
+
+//content
+
+.content {
+	margin-top: -100px;
+	&__body {
+		display: flex;
+		@media (max-width: 767px) {
+			flex-direction: column;
+		}
+	}
+
+	&__main {
+		flex: 1 1 auto;
+		background-color: #fff;
+		padding: 50px 140px;
+		@media (max-width: 1365px) {
+			padding: 50px;
+		}
+		@media (max-width: 992px) {
+			padding: 30px;
+		}
+		@media (max-width: 767px) {
+			flex: none;
+			padding: 20px;
+		}
+	}
+}
+.aside {
+	flex: 0 0 400px;
+	margin: 0 24px 24px 0;
+	@media (max-width: 992px) {
+		flex: 0 0 300px;
+	}
+	@media (max-width: 767px) {
+		flex: none;
+		margin: 0 0 24px 0;
+	}
+	&__item {
+		min-height: 400px;
+		background: #244e8f;
+		position: relative;
+		padding: 50px;
+		display: flex;
+		flex-direction: column;
+		position: relative;
+		margin-bottom: 24px;
+		@media (max-width: 992px) {
+			padding: 30px;
+			min-height: 300px;
+		}
+	}
+
+	&__image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+	}
+
+	&__subtitle {
+		font-family: "Playfair Display";
+		font-weight: bold;
+		font-size: 36px;
+		line-height: 144%;
+		color: #ffffff;
+		flex: 1 1 auto;
+		margin-bottom: 20px;
+		@media (max-width: 992px) {
+			font-size: 26px;
+		}
+	}
+
+	&__button {
+		position: relative;
+		z-index: 1;
+		display: block;
+		text-align: center;
+	}
+
+	&__fast-links {
+		padding: 30px;
+		@media (max-width: 992px) {
+			padding: 0;
+		}
+	}
+
+	&__fast-links-title {
+		font-family: "Playfair Display";
+		font-weight: bold;
+		font-size: 24px;
+		line-height: 125%;
+		color: #234d8e;
+		margin-bottom: 20px;
+	}
+
+	&__list {
+		li {
+			margin-bottom: 10px;
+		}
+	}
+
+	&__link {
+		font-weight: bold;
+		font-size: 16px;
+		line-height: 112%;
+		text-transform: uppercase;
+		color: #5d799c;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
+.event {
+	padding-bottom: 30px;
+	&:not(:last-child) {
+		margin-bottom: 40px;
+		border-bottom: 1px solid #dae4ee;
+	}
+	&__genre {
+		font-weight: bold;
+		margin-bottom: 10px;
+		letter-spacing: 0.02em;
+		text-transform: uppercase;
+		color: #4972b3;
+	}
+
+	&__title {
+		font-family: "Playfair Display";
+		font-weight: bold;
+		font-size: 24px;
+		line-height: 130%;
+		color: #234d8e;
+		display: inline-block;
+		margin-bottom: 10px;
+		&:hover {
+			text-decoration: underline;
+		}
+		@media (max-width: 767px) {
+			font-size: 20px;
+		}
+	}
+
+	&__date {
+		font-size: 12px;
+		line-height: 250%;
+		letter-spacing: 0.02em;
+		text-transform: uppercase;
+		color: #4972b2;
+		margin-bottom: 10px;
+	}
+
+	&__text {
+		font-weight: 300;
+		line-height: 171%;
+		letter-spacing: -0.02em;
+		color: #3d3d3d;
+		margin-bottom: 10px;
+		p:first-child {
+			font-weight: 700;
+		}
+	}
+}
+.pagination {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	margin: 24px 0 48px 0;
+	&__arrow {
+		border: 1px solid #e5e5e5;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		display: block;
+		transition: all 0.3s ease 0s;
+		&:hover {
+			border: 1px solid #5d799c;
+		}
+	}
+	&__left-arrow {
+		margin-right: 10px;
+		background: url("../img/list/left.svg") center no-repeat, #fff;
+	}
+
+	&__state {
+		font-size: 16px;
+		line-height: 150%;
+		color: #5d799c;
+	}
+
+	&__right-arrow {
+		margin-left: 10px;
+		background: url("../img/list/right.svg") center no-repeat, #fff;
 	}
 }
 
